# zenflow

./: .gitignore  .pre-commit-config.yaml  README.md  checks.ipynb  pyproject.toml
.github/workflows/: coverage.yml  release.yml
examples/: bijectors.ipynb  bounded_distributions.ipynb  debug.ipynb  deep_set.ipynb  distribution_demo.ipynb  distributions.ipynb  one_dimensional_distribution.ipynb  one_dimensional_distribution_conditional.ipynb  two_moons.ipynb  two_moons_2.ipynb  two_moons_conditional.ipynb
src/neural_flow/: bijectors.py  bijectors2.py  distributions.py  flow.py  flow2.py  train.py  train2.py  typing.py  utils.py
src/neural_flow/old/: __init__.py  bijectors.py  flow.py
src/zenflow/: bijectors.py  flow.py
tests/: test_bijectors.py  test_distributions.py  test_flow.py  test_train.py  test_utils.py
