[build-system]
requires = ["setuptools >= 61", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-flow"
version = "3.1.2"
description = "Probabilistic modeling with normalizing flows."
authors = ["Hans Dembinski <hans.dembinski@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["jax ^= 0.4.2", "jaxlib ^=0.4.2", "optax ^= 0.1.4", "rich"]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/hdembinski/neural_flow"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage[toml]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "W", "D"]
ignore = ["D212", "D203", "D107", "D102"]
unfixable = ["ERA"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --strict-config --strict-markers -q -ra --ff"
testpaths = ["src/resample", "tests"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
  "error::DeprecationWarning",
  "error::numpy.VisibleDeprecationWarning",
]
